--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,9 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_appointments">My Appointments</string>
+    <string name="menu_prescriptions">Payment Methods</string>
+    <string name="menu_logout">Logout</string>
 
     <string name="MAPS_API">AIzaSyBHfNBeo697vUiLgTFa9eA3sLhPVLpfbvQ</string>
 </resources>
